# projetogeradordesp

./: README.md  app.py
gerador_despacho/: pyproject.toml  render.yaml  requirements.txt
utils/: pdf_generator.py
