[tool.poetry]
name = "projetogeradordesp"
version = "0.1.0"
description = "Gerador de Despachos SEREC"
authors = ["Vittoria Torres Silva"]

[tool.poetry.dependencies]
python = "^3.11"
pypdf2 = "^3.0.1"
reportlab = "^4.3.1"
streamlit = "^1.44.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"